<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App name -->
    <string name="app_name" translatable="false">iink Demo</string>

    <string name="menu_inputMode">Input mode</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_redo">Redo</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_convert">Convert</string>
    <string name="menu_newPackage">New...</string>
    <string name="menu_openPackage">Open...</string>
    <string name="menu_savePackage">Save</string>
    <string name="menu_export">Export</string>
    <string name="menu_newPart">New part...</string>
    <string name="menu_previousPart">Previous part</string>
    <string name="menu_nextPart">Next part</string>
    <string name="menu_resetView">Reset view</string>
    <string name="menu_zoomIn">Zoom in</string>
    <string name="menu_zoomOut">Zoom out</string>

    <string name="newPackage_title">New package - enter file name</string>
    <string name="openPackage_title">Open package - select file</string>
    <string name="newPart_title">New part - select type</string>
    <string name="exportType_title">Export - select type</string>
    <string name="exportPackage_title">Export - select file</string>
    <string name="addImage_title">Add image - select file</string>
    <string name="addType_title">Add block - select type</string>
    <string name="addData_title">Add block - enter data</string>
    <string name="inputMode_title">Input mode - select behavior</string>
    <string name="inputMode_forcePen">Pen</string>
    <string name="inputMode_forceTouch">Touch</string>
    <string name="inputMode_auto">Auto</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="add_word">Add Word</string>
    <string name="add_supported_text">Add Text</string>
    <string name="add_custom_word">Add word</string>
</resources>
